fix: enhance vehicle card styles for improved readability and layout

--- a/app/Vehicle/static/css/vehicle.css
+++ b/app/Vehicle/static/css/vehicle.css
@@ -113,9 +113,30 @@ body {
   color: #ccc !important;
 }
 
+.info-header{
+  color: black;
+}
+
+.location-text{
+  color: #666;
+}
+
+.dark-mode .location-text {
+  color: #ccc;
+}
+
 .vehicle-card-content {
   flex: 1;
   padding-right: 15px;
+}
+
+.vehicle-card-row strong {
+  font-weight: bold;
+  color: black;
+}
+
+.dark-mode .vehicle-card-row strong {
+  color: #ccc;
 }
 
 .vehicle-number {
@@ -567,7 +588,7 @@ input:checked + .slider:before {
   font-size: 16px;
   font-family: 'Roboto', Arial, sans-serif;
   outline: none;
-  padding: 0 8px 4px 0;
+  padding: 14px 14px 14px 14px;
   transition: border-color 0.2s;
   border-radius: 1vh;
 }
